Renamed variables to match example

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <img id="cat-in-cart" alt="cat in cart " src="cat.png" />
-    <input type="text" id="input-value" placeholder="Bread">
+    <input type="text" id="input-field" placeholder="Bread">
     <button id="add-btn">Add to cart</button>
     <div>
       <ul id="shopping-list"></ul>
