Cleaned up css, added flex-wrap & styling to list

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Shopping Cart</title>
@@ -10,12 +11,10 @@
 
 <body>
   <div class="container">
-    <img id="cat-in-cart" alt="cat in cart " src="cat.png" />
+    <img id="cat-in-cart" alt="cat in a shopping cart" src="cat.png" />
     <input type="text" id="input-field" placeholder="Bread">
     <button id="add-btn">Add to cart</button>
-    <div>
-      <ul id="shopping-list"></ul>
-    </div>
+    <ul id="shopping-list"></ul>
   </div>
 
   <script src="index.js" type="module"></script>
