Added favicon and web manifest

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Shopping Cart</title>
-</head>
+  <link rel="apple-touch-icon" sizes="180x180" href="/shopping-list/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/shopping-list/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/shopping-list/images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest"></head>
 
 <body>
   <div class="container">
-    <img id="cat-in-cart" alt="cat in a shopping cart" src="cat.png" />
+    <img id="cat-in-cart" alt="cat in a shopping cart" src="images/cat.png" />
     <input type="text" id="input-field" placeholder="Bread">
     <button id="add-btn">Add to cart</button>
     <ul id="shopping-list"></ul>
