--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Shopping Cart</title>
@@ -16,6 +16,7 @@
   <div class="container">
     <img id="cat-in-cart" alt="cat in a shopping cart" src="images/cat.png" />
     <input type="text" id="input-field" placeholder="Bread">
+    <p id="error-message"></p>
     <button id="add-btn">Add to cart</button>
     <ul id="shopping-list"></ul>
   </div>
